restyled booking form, fixed issues on mobile booking form

--- a/packages/navigate-theme/src/styles/base/_utilities.scss
+++ b/packages/navigate-theme/src/styles/base/_utilities.scss
@@ -405,7 +405,7 @@
 .styles_modal__gNwvD {
   @include respond(phone) {
     padding: 0;
-    height: 88vh;
+    height: 100vh;
     width: 100%;
   }
 }
